--- a/Y_Cấu hình Ban Vật Tư v1/Nhóm quy trình xuất nhập trên kho CĐS/Nhập kho/Nhập kho cho đi bảo hành/DeNghiNhapKho.vm
+++ b/Y_Cấu hình Ban Vật Tư v1/Nhóm quy trình xuất nhập trên kho CĐS/Nhập kho/Nhập kho cho đi bảo hành/DeNghiNhapKho.vm
@@ -1,17 +1,17 @@
 <head>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-    <title>CongVan_CFSX</title>
+    <title>Untitled 1</title>
     <style type="text/css">
         body {
             font-family: "Times New Roman";
-            font-size: 9pt;
+            font-size: 13pt;
             page-break-inside: avoid;
             page-break-after: auto
         }
 
         table {
             font-family: "Times New Roman";
-            font-size: 9pt;
+            font-size: 13pt;
             line-height: 1.3;
             width: 100%;
         }
@@ -22,16 +22,27 @@
 
         table th {
             font-family: "Times New Roman";
-            font-size: 10pt;
+            font-size: 13pt;
             text-align: center;
-            vertical-align: top;
         }
 
+        table th,
         table td {
+            vertical-align: top;
             font-size: 9pt;
         }
 
+        .tableContent {
+            font-size: 13pt;
+            width: 100%;
+            border-collapse: collapse;
+            border: 0.25pt solid gray;
+        }
 
+        .tableContent th,
+        .tableContent td {
+            border: 0.25pt solid gray;
+        }
 
         .tableHeader {
             width: 100%;
@@ -383,18 +394,25 @@
     #set($outputMap = {})
     #foreach($item in $DanhSachVatTu)
         #set($MaVatTu = $item.MaVatTu)
-        #set($SoLuongStr = $item.SoLuong)
 
+        #set($SoLuongStr = $item.SoLuong)
         #set($valTam = $SoLuongStr.toString())
 		#set($valLongTam = "#RoundReturnString($valTam)" )
 		#set($SoLuong = $LONG_VALUE.parseLong($valLongTam.trim()) )
 
-        #if(!$outputMap.containsKey($MaVatTu))
-            #set($outputMap[$MaVatTu] = { "MaVatTu": $MaVatTu, "TenVatTuVaQuyCach": $item.TenVatTuVaQuyCach, "DonViTinh": $item.DonViTinh, "SoLuong": $SoLuong, "GhiChu": $item.GhiChu })
+
+        
+        
+
+
+        #set($key = "${MaVatTu}-${item.TenVatTuVaQuyCach}-${item.DonViTinh}-${item.GhiChu}")
+        #if(!$outputMap.containsKey($key))
+            #set($outputMap[$key] = { "MaVatTu": $MaVatTu, "TenVatTuVaQuyCach": $item.TenVatTuVaQuyCach, "DonViTinh": $item.DonViTinh, "SoLuong": $SoLuong, "GhiChu": $item.GhiChu })
         #else
-            #set($existingItem = $outputMap[$MaVatTu])
+            #set($existingItem = $outputMap[$key])
             #set($existingItem.SoLuong = $existingItem.SoLuong + $SoLuong)
         #end
+
     #end
 
 
@@ -402,166 +420,153 @@
     #set($outputArray = $outputMap.values().toArray())
 
 
+
     <div class="sectionGuide">
         <table colspan="0" rowspan="0" class="tableHeader"
             style="margin-top: 10pt; margin-left: 0pt; margin-right: 5pt;">
             <tr>
-                <th width="40%" style="text-align: center; font-size:10pt">
-                    <span style="font-weight: normal;">TỔNG CÔNG TY</span>
+                <td width="40%" style="text-align: center; font-size:11pt">
+                    <div style="text-transform: uppercase;">$DonViDeNghi</div>
+                    <b class="title" style="border-bottom: 1px solid black;text-transform: uppercase;">$PhongBan</b>
                     <br />
-                    <span style="font-weight: normal;">ĐIỆN LỰC TP HÀ NỘI </span>
-                    <br />
-                    <b style="border-bottom: 1px solid black;">$DonViDeNghi</b>
-                    <br />
-                    <div style="font-weight: normal;">Số: $SoToTrinh/ĐN - $DonViDeNghi</div>
-                </th>
-                <th width="60%" style="text-align: center; font-size:10pt">
+                    <div style="font-weight: normal;">Số: $SoToTrinh</div>
+                </td>
+                <td width="60%" style="text-align: center; font-size:11pt">
                     <span style="text-align: center;">
                         <b>CỘNG HÒA XÃ HỘI CHỦ NGHĨA VIỆT NAM</b>
                         <br />
-                        <b style="border-bottom: 1px solid black;">Độc lập - Tự do - Hạnh phúc</b>
-                        <br />
-                        <br />
+                        <b class="title" style="border-bottom: 1px solid black;">Độc lập - Tự do - Hạnh phúc</b>
                     </span>
-                    <div style="font-size:10pt; text-align: right;">
+                    <div style="font-size:11pt; text-align: right;">
                         <br />
-                        <i>Hà Nội, ngày $NgayToTrinh.split(" ")[0].split("/")[0] tháng $NgayToTrinh.split("
+                        <i>Hà Nội, ngày $NgayNhanThucTe.split(" ")[0].split("/")[0] tháng $NgayNhanThucTe.split("
                             ")[0].split(
-                            "/")[1] năm $NgayToTrinh.split(" ")[0].split("/")[2]
+                            "/")[1] năm $NgayNhanThucTe.split(" ")[0].split("/")[2]
                         </i>
                     </div>
-                </th>
+                </td>
             </tr>
         </table>
     </div>
-    <div class="sectionGuide">
-        <div>
+    <div style="font-size:11pt; text-align: right;">
+        <div class="sectionGuide">
             <table class="tableHeader">
                 <tr>
-                    <td style="text-align: center; font-size:13pt; font-weight: bold;">
-                        <b>ĐỀ NGHỊ CẤP VẬT TƯ THIẾT BỊ</b>
-                    </td>
-                </tr>
-                <tr>
-                    <td style="font-size:10pt; font-weight: normal;">
-                        <div style="margin-left: 300px;">Tại kho: $TaiKho</div>
-                    </td>
-                </tr>
-                <tr>
-                    <td style="font-size:10pt; font-weight: normal;">
-                        <div style="margin-left: 300px;">Kính gửi: $KinhGui</div>
+                    <td style="text-align: center; font-size: 13pt;">
+                        <b class="title">
+                            ĐỀ NGHỊ
+                            <br />
+                            <span style="border-bottom: 1px solid black;">V/v nhập kho đi $loaiNhapKho</span>
+                        </b>
                     </td>
                 </tr>
             </table>
-            <div style="padding-top: 15pt; font-size: 10pt;">
-                <div>Tên đơn vị đề nghị: $DonViDeNghi</div>
-                <div>Lý do cấp:
-                    $LyDoCap
-                </div>
-                <div>Đề nghị cấp danh sách vật tư thiết bị như sau:</div>
-            </div>
         </div>
-        <div>
-            <table class="tableHeaderxx">
-                <tr class="PaddingCellTable">
-                    <th style="text-align: center; font-weight: bold; font-size: 10pt;">
-                        STT
-                    </th>
-                    <th style="text-align: center; font-weight: bold; font-size: 10pt;">
-                        MÃ VẬT TƯ
-                    </th>
-                    <th style="text-align: center; font-weight: bold; font-size: 10pt;">
-                        TÊN VẬT TƯ VÀ QUY CÁCH
-                    </th>
-                    <th style="text-align: center; font-weight: bold; font-size: 10pt;">
-                        ĐƠN VỊ TÍNH
-                    </th>
-                    <th style="text-align: center; font-weight: bold; font-size: 10pt;">
-                        SỐ LƯỢNG
-                    </th>
-                    <th style="text-align: center; font-weight: bold; font-size: 10pt;">
-                        GHI CHÚ
-                    </th>
-                </tr>
-                #set($index = 1)
-                #foreach($row in $outputArray)
-                <tr class="PaddingCellTable">
-                    <td style="text-align: center; font-size: 9pt;">
-                        $index
-                    </td>
-                    <td style="text-align: left; font-size: 9pt;">
-                        $row.get("MaVatTu")
-                    </td>
-                    <td style="text-align: left; font-size: 9pt;">
-                        $row.get("TenVatTuVaQuyCach")
-                    </td>
-                    <td style="text-align: left; font-size: 9pt;">
-                        $row.get("DonViTinh")
-                    </td>
-                    <td style="text-align: right; font-size: 9pt;">
-                        #formatStringFinance($row.get("SoLuong"))
-                    </td>
-                    <td style="text-align: left; font-size: 9pt;">
-                        $row.get("GhiChu")
-                    </td>
-                </tr>
-                #set($index = $index + 1)
-                #end
-                #set($remainingRows = 10 - $outputArray.size())
-                #if($remainingRows > 0)
-                    #foreach($i in [1..$remainingRows])
+
+        <div class="sectionGuide" style="margin-top: 20px;">
+            <div>
+                <table class="tableHeaderxx" style="font-size: 12pt;">
                     <tr class="PaddingCellTable">
-                        <td style="text-align: center; font-size: 9pt;">$index</td>
-                        <td style="text-align: left; font-size: 9pt;">&nbsp;</td>
-                        <td style="text-align: left; font-size: 9pt;">&nbsp;</td>
-                        <td style="text-align: left; font-size: 9pt;">&nbsp;</td>
-                        <td style="text-align: right; font-size: 9pt;">&nbsp;</td>
-                        <td style="text-align: left; font-size: 9pt;">&nbsp;</td>
+                        <th style="text-align: center; font-weight: bold; font-size: 11pt;">
+                            STT
+                        </th>
+                        <th style="text-align: center; font-weight: bold; font-size: 11pt;">
+                            Mã vật tư
+                        </th>
+                        <th style="text-align: center; font-weight: bold; font-size: 11pt;">
+                            Tên vật tư
+                        </th>
+                        <th style="text-align: center; font-weight: bold; font-size: 11pt;">
+                            Đơn vị tính
+                        </th>
+                        <th style="text-align: center; font-weight: bold; font-size: 11pt;">
+                            Số lượng
+                        </th>
+                        <th style="text-align: center; font-weight: bold; font-size: 11pt;">
+                            Ghi chú
+                        </th>
+                    </tr>
+                    #set($index = 1)
+                    #foreach($row in $outputArray)
+                    <tr class="PaddingCellTable">
+                        <td style="text-align: center; font-size: 11pt;">
+                            $index
+                        </td>
+                        <td style="text-align: left; font-size: 11pt;">
+                            $row.get("MaVatTu")
+                        </td>
+                        <td style="text-align: left; font-size: 11pt;">
+                            $row.get("TenVatTuVaQuyCach")
+                        </td>
+                        <td style="text-align: left; font-size: 11pt;">
+                            $row.get("DonViTinh")
+                        </td>
+                        <td style="text-align: right; font-size: 11pt;">
+                            #formatStringFinance($row.get("SoLuong"))
+                        </td>
+                        <td style="text-align: left; font-size: 11pt;">
+                            $row.get("GhiChu")
+                        </td>
                     </tr>
                     #set($index = $index + 1)
                     #end
-                #end
-            </table>
-            <table colspan="0" rowspan="0" class="tableHeader" style="margin-top: 20pt;">
-                <tr>
-                    <th style="text-align: center; font-size: 9pt;">
-                        <p style="font-size:2pt; color: white">$ChuKy_TruongPhong</p>
-                        <b>TRƯỞNG/PHÓ PHÒNG</b>
-                        <br />
-                        <br />
-                        <br />
-                        <br />
-                        <br />
-                        <br />  
-                        <p>$HoTen_TruongPhong</p>
-                    </th>
-                    
-                    <th style="text-align: center; font-size: 9pt;">
-                        <p style="font-size:2pt; color: white">$ChuKy_TruongPhoPhongKHVT</p>
-                        <b>TRƯỞNG/PHÓ PHÒNG KHVT</b>
-                        <span>$ChuKy_ChuyenVien</span>
-                        <br />
-                        <br />
-                        <br />
-                        <br />
-                        <br />
-                        <br />
-                        <p>$HoTen_TruongPhoPhongKHVT</p>
-                    </th>
-                    <th style="text-align: center; font-size: 9pt;">
-                        <p style="font-size:2pt; color: white">$ChuKy_GiamDoc</p>
-                        <b>GIÁM ĐỐC</b>
-                        <br />
-                        <br />
-                        <br />
-                        <br />
-                        <br />
-                        <br />
-                        <p>$HoTen_GiamDoc</p>
-                    </th>
-                </tr>
-            </table>
+                    <tr class="PaddingCellTable">
+                        <td></td>
+                        <td style="text-align: left; font-size: 11pt; font-weight: bold;">Tổng cộng</td>
+                        <td></td>
+                        <td></td>
+                        <td style="text-align: right; font-size: 11pt;">
+                            #formatFinance($TongCong)
+                        </td>
+                        <td></td>
+                    </tr>
+                </table>
+                <div style="margin-top: 16.5pt; text-align:left">
+                    <p>Ngày nhận thực tế: $NgayNhanThucTe</p>
+                    <p>Biên bản nhập kho CMIS: $BienBanCMIS</p>
+                </div>
+                <div class="sectionGuide">
+                    <table colspan="0" rowspan="0" class="tableHeader"
+                        style="margin-top: 16.5pt; page-break-inside:avoid; page-break-after:auto">
+                        <tr>
+                            
+                            <th style="text-align: center; font-size: 11pt;">
+                                <div style="color: white;">GiamDoc</div>
+                                <b style="text-transform: uppercase;">$ChucVuGiamDoc</b>
+                                <br />
+                                <br />
+                                <br />
+                                <br />
+                                <br />
+                                <br />
+                                <div>$ChuKy_GiamDoc</div>
+                            </th>
+                            <th style="text-align: center; font-size: 11pt;">
+                                <div style="color: white;">TruongDonVi</div>
+                                <b style="text-transform: uppercase;">$ChucVu</b>
+                                <br />
+                                <br />
+                                <br />
+                                <br />
+                                <br />
+                                <br />
+                                <div>$ChuKy_TruongDonVi</div>
+                            </th>
+                            <th style="text-align: center; font-size: 11pt;">
+                                <div style="color: white;">Key_NguoiLap</div>
+                                <b style="text-transform: uppercase;">NGƯỜI LẬP</b>
+                                <br />
+                                <br />
+                                <br />
+                                <br />
+                                <br />
+                                <br />
+                                <div>$Name_NguoiLap</div>
+                            </th>
+                        </tr>
+                    </table>
+                </div>
+            </div>
         </div>
     </div>
-
 </body>
